<resources>
    <string name="app_name">KWhatsApp</string>
	<string name="Mods">KMods</string>
	<string name="Privacy">Privacy</string>
    <string name="CPrivacy">Custom Privacy</string>
    <string name="BackupSum">Create a Backup of WhatsApp Data</string>
    <string name="RestoreSum">Restore WhatsApp Data</string>
	<string name="Share">Share</string>
	<string name="ShareSum">Share KWhatsApp with your friends</string>
	<string name="ShareSbj">KWhatsApp</string>
	<string name="ShareBdy">Hey, do you like WhatsApp but do you want more privacy and more settings? Install KWhatsApp and enjoy WhatsApp like never before! Download Now:- https://plus.google.com/u/0/communities/117929374559788388477</string>
    <string name="HideReceipt">Hide second tick</string>
    <string name="HideRead">Hide blue ticks</string>
    <string name="HidePlay">Hide blue microphone</string>
    <string name="HideRecord">Hide recording…</string>
    <string name="HideCompose">Hide typing…</string>
	<string name="HideSeen">Pause last seen</string>
    <string name="HideSeenSum">Please restart WhatsApp for changes to take effect.</string>
    <string name="HideReceiptSumC">USE THIS MOD ON YOUR OWN RISK! MESSAGES MIGHT GET DELIVERED/RECEIVED LATE.</string>
    <string name="HideReceiptSumG">USE THIS MOD ON YOUR OWN RISK! MESSAGES MIGHT GET DELIVERED/RECEIVED LATE.</string>
    <string name="HideReceiptSumB">USE THIS MOD ON YOUR OWN RISK! MESSAGES MIGHT GET DELIVERED/RECEIVED LATE.</string>
    <string name="HidePlaySumC">"Don't tell the sender that you played the voice note."</string>
    <string name="HidePlaySumG">"Don't tell the group that you have played the voice note."</string>
    <string name="HidePlaySumB">"Don't tell the broadcast sender that you have played the voice note."</string>
    <string name="HideReadSumC">"Don't tell the sender that you have read the message."</string>
    <string name="HideReadSumG">"Don't tell the group that you have read the messages."</string>
    <string name="HideReadSumB">"Don't tell the broadcast sender that you have read the message."</string>
    <string name="HideRecordSum">"Don't tell the sender that you are recording a voice message."</string>
    <string name="HideComposeSum">"Don't tell the sender that you are typing a message."</string>
    <string name="CallBtn">Hide Call Button</string>
    <string name="CallBtnSum">Hide call button from conversation action bar</string>
    <string name="sCallBtn">Show Call Button</string>
    <string name="TxtSelect">Make Text Selectable</string>
    <string name="TxtSelectSum">Enable chat bubble text selection</string>
    <string name="ArchvChat">Hide Archived Chats</string>
    <string name="ArchvChatSum">Hide archived chats button from conversations screen (needs restart)</string>
    <string name="SmN">Set My Name</string>
    <string name="SmNSum">Set Your Name To Home ActionBar</string>
    <string name="SmS">Set My Status</string>
    <string name="SmSSum">Set Your Status To Home ActionBar Under Name</string>
    <string name="HideDate">Hide date and name</string>
    <string name="HideDateSum">Hide the date and the name when copying 2 messages or more</string>
    <string name="ShowDate">Show date and name</string>
    <string name="ImgShareLimit">Disable Image Share Limit</string>
    <string name="ImgShareLimitSum">Send more than 10 image files at once</string>
    <string name="UpSizeLimit">Video Size Limit</string>
    <string name="UpSizeLimitSum">Increase video file size upload limit to 1GB</string>
    <string name="ImgHi">Full Resolution</string>
    <string name="ImgHiSum">Add full resolution send button in Image Preview screen</string>
    <string name="AudioSensor">Enable Proximity Sensor</string>
    <string name="AudioSensorSum">Enabled by default, disable to turn it off.</string>
    <string name="AudioEars">Disable Output Switching</string>
    <string name="AudioEarsSum">Prevents speaker/earpiece switching while playing</string>
    <string name="MultiChat">Multi Task Chat</string>
    <string name="MultiChatSum">Multiple Task Chat For Lollipop And Up</string>
    <string name="ShortcutSum">Create KWhatsApp Shortcut on home screen To Fix Counter Message unread</string>
    <string name="report">Report</string>
    <string name="reportSum">Report About Any Problem Of KWhatsApp To ME</string>
    <string name="coToast">Contact Online Toast</string>
    <string name="coToastSum">"Show toast when contact is online,
        1. You must be online
        2. You must have a chat created with contact"</string>
    <string name="gCounter">Group Message Counter</string>
    <string name="gCounterSum">Count Messeages For Each Member in Group And Display It.</string>
</resources>
